<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_splah"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="br.com.duranduran.nac_tainaduranpaixao_rm76996.PlayerActivity">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rgGender">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:checked="false"
            android:padding="20dp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:checked="false"
            android:padding="20dp"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <EditText
        android:id="@+id/etPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:hint="@string/name"
        android:padding="10dp"
        android:layout_margin="20dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectChips"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15sp" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/spFichas"
        android:entries="@array/n_fichas"
        android:background="@color/white" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon"
        android:id="@+id/ivGender"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp" />

    <info.hoang8f.widget.FButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="start"
        android:padding="20dp"
        android:text="@string/start"
        android:textSize="18sp"
        android:layout_margin="15dp"
        app:buttonColor="@color/button"
        app:cornerRadius="25dp"
        app:shadowColor="@color/colorAccent"
        app:shadowEnabled="true"
        app:shadowHeight="5dp" />

</LinearLayout>
