<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_game"
    tools:context="br.com.duranduran.nac_tainaduranpaixao_rm76996.MenuActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:padding="50dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="38sp"
        android:textColor="@color/colorAccent"
        android:fontFamily="casual"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="80sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <info.hoang8f.widget.FButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:textSize="18sp"
            android:onClick="play"
            android:layout_margin="15dp"
            app:cornerRadius="25dp"
            app:buttonColor="@color/button"
            app:shadowColor="@color/colorAccent"
            app:shadowEnabled="true"
            app:shadowHeight="5dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <info.hoang8f.widget.FButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="18sp"
            android:onClick="about"
            android:layout_margin="15dp"
            app:cornerRadius="25dp"
            app:buttonColor="@color/button"
            app:shadowColor="@color/colorAccent"
            app:shadowEnabled="true"
            app:shadowHeight="5dp"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="80sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_by"
        android:padding="10dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:fontFamily="casual" />

</LinearLayout>