<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_about"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="br.com.duranduran.nac_tainaduranpaixao_rm76996.AboutActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:padding="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="38sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:padding="5dp"
        android:text="Version 0.0.1"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10sp" />

    <ImageView
        android:id="@+id/splash"
        android:layout_width="@dimen/width_splash"
        android:layout_height="@dimen/height_splash"
        android:background="@drawable/cherry02" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25sp" />

    <info.hoang8f.widget.FButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="back"
        android:padding="20dp"
        android:text="@string/back"
        android:textSize="18sp"
        app:buttonColor="@color/button"
        app:cornerRadius="25dp"
        app:shadowColor="@color/colorAccent"
        app:shadowEnabled="true"
        app:shadowHeight="5dp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="10sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:padding="10dp"
        android:text="@string/build_by"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>
